fix(list): ensure list items are aligned vertically (#437)
Fixes https://github.com/patternfly/patternfly-ng/issues/436

--- a/src/app/list/basic-list/list.component.less
+++ b/src/app/list/basic-list/list.component.less
@@ -3,8 +3,8 @@
   width: 12px;
 }
 
-// Container for item click events
-.pfng-list-content {
+// Container for item heading
+.pfng-list-heading {
   display: flex;
   flex-grow: 1;
 }
